# ChocoAPI

./: Cargo.toml
.github/workflows/: general.yml
configuration/: base.yaml  local.yaml  production.yaml
src/: configuration.rs  erro.rs  lib.rs  startup.rs  tokens.rs
src/models/: users.rs
src/routes/: register.rs
tests/api/: helpers.rs  register.rs  services.rs
